--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ title: Areeb Mehmood, Graduate Mechanical Engineering Student
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Areeb Mehmood!</h1>
-	<p>I am studying Robotics at the Georiga Institute of Tehcnology.</p> 
+	<p>I am studying Robotics at the Georgia Institute of Technology.</p> 
 	<p><a href="/about">See some of my projects</a></p>
 </div><!-- /.blurb -->
