--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@ layout: default
 title: Areeb Mehmood, Graduate Mechanical Engineering Student
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Areeb Mehmood!</h1>
+	<h1>Areeb Mehmood</h1>
 	<p>I am studying Robotics at the Georgia Institute of Technology.</p> 
-	<p><a href="/about">See some of my projects</a></p>
 </div><!-- /.blurb -->
