--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Areeb Mehmood, Graduate Mechanical Engineering Student
 ---
 <div class="blurb">
 	<h1>Areeb Mehmood</h1>
-	<p>I am studying Robotics at the Georgia Institute of Technology.</p> 
+	<p>This website is a work in progress. </p> 
 </div><!-- /.blurb -->
