--- a/index.html
+++ b/index.html
@@ -6,3 +6,11 @@ title: Areeb Mehmood, Graduate Mechanical Engineering Student
 	<h1>Areeb Mehmood</h1>
 	<p>This website is a work in progress. </p> 
 </div><!-- /.blurb -->
+
+<div id="like_button_container"></div>
+
+<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+
+  <!-- Load our React component. -->
+  <script src="like_button.js"></script>
