Work in progress update

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
                     <h4>Areeb Mehmood</h4>
-                    <h1>Graduate Student</h1> </div>
+                    <h1>Graduate Student</h1> 
+                    <p> This website is a work in progress </p>
+                </div>
             </div>
         </div>
     </div>
