Minor About Me paragraph update

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="h-50"></div>
                 <p>I am a Mechanical Engineering student at the Georgia Institute of Technology. I hold a Bachelors of Science degree in Mechanical Engineering with a Minor in Computer Science from the Universtiy of California, Davis.</p>
                 <p>I enjoy developing software, motorcycle riding, photography, design and learning new things! </p>
-                <p>This website is a gallery of the projects I've worked on, and a work in progress. Please view my Github for any related code. </p>
+                <p>This website is a gallery of the projects I've worked on. Please view my Github for any related code. </p>
                 <!-- <div class="h-50"></div> <img src="img/Signature.svg" width="230" alt="" /> -->
                 <div class="h-50"></div>
             </div>
