Added Youtube link for vehicle simulation

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                         <h2>Vehicle Simulation<br /> DART </h2>
                         <h4> simulation, dart, matlab</h4>
                         <div class="h-50"></div>
-                        <p> In progress! </p>
+                        <p> In progress! <br /> <a href="https://www.youtube.com/watch?v=q1LPeMNXBCU">Watch a simulation here. </a> </p>
                         <br />
                         <br />
                         <img src="img/portfolio/vehicle_simulation/suspension_plot.png" alt="" class="img-responsive" />
@@ -462,30 +462,6 @@
         </div>
     </div> -->
 
-    <!--DEMO0X-->
-    <!-- <div id="animatedModal_2" class="popup-modal">
-        <div id="btn-close-modal" class="close-animatedModal_2 close-popup-modal"> <i class="ion-close-round"></i> </div>
-        <div class="clearfix"></div>
-        <div class="modal-content">
-            <div class="container">
-                <div class="portfolio-padding">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h2>Geschäfts CHANGE<br /> Web-Studios</h2>
-                        <div class="h-50"></div>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium strategic theme areas vis-a-vis.</p>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
-                        <br />
-                        <br /> <img src="img/portfolio/02.jpg" alt="" class="img-responsive" />
-                        <br />
-                        <br />
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium strategic theme areas vis-a-vis.</p>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
-                        <br />
-                        <br /> </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
 
     <!-- contact -->
     <!-- <div class="section" id="contact">
