--- a/index.html
+++ b/index.html
@@ -182,12 +182,13 @@
                         
                         <!-- portfolio_container -->
                         <div class="no-padding portfolio_container clearfix" data-aos="fade-up">
+                            
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 cad">
-                                <a id="demo01" href="#animatedModal_cad" class="portfolio_item"> <img src="img/portfolio/cad/cartesian.JPG" alt="image" class="img-responsive" />
+                            <div class="col-md-4 col-sm-6 software design">
+                                <a id="demo03" href="#animatedModal_game_dev" class="portfolio_item"> <img src="img/portfolio/game_dev/blocksoid_screenshot.png" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Cartesian Assembly</span> <em>Computer Aided Design</em> </div>
+                                            <div class="item_info"> <span>Blocksoid</span> <em>Unity 3D Game Development</em> </div>
                                         </div>
                                     </div>
                                 </a>
@@ -219,11 +220,11 @@
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 software design">
-                                <a id="demo03" href="#animatedModal_game_dev" class="portfolio_item"> <img src="img/portfolio/game_dev/blocksoid_screenshot.png" alt="image" class="img-responsive" />
+                            <div class="col-md-4 col-sm-6 cad">
+                                <a id="demo01" href="#animatedModal_cad" class="portfolio_item"> <img src="img/portfolio/cad/cartesian.JPG" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Blocksoid</span> <em>Unity 3D Game Development</em> </div>
+                                            <div class="item_info"> <span>Cartesian Assembly</span> <em>Computer Aided Design</em> </div>
                                         </div>
                                     </div>
                                 </a>
@@ -359,7 +360,7 @@
                         <h2>Solar Car at UC Davis<br /> Gallery </h2>
                         <h4> solidworks, automotive, design, manufacturing</h4>
                         <div class="h-50"></div>
-                        <p>In progress! </p>
+                        <p>In progress! <br /> <br /> Meanwhile, here are some photos of my work: </p>
                         <br />
                         <br /> <img src="img/portfolio/solar_car/chassis_full.JPG" alt="" class="img-responsive" />
                         <br />
@@ -387,7 +388,9 @@
                         <h2>Game Development<br /> Gallery </h2>
                         <h4> design, game development, unity</h4>
                         <div class="h-50"></div>
-                        <p> In progress! </p>
+                        <p> In progress! <br /> <br />
+                            Blocksoid was my first software project ever, and I built it in my free time.
+                            <a href="https://github.com/areebm/blocksoid"> View the game code here. </a> </p>
                         <br />
                         <br />
                     </div>
@@ -408,7 +411,9 @@
                         <h2>Vehicle Simulation<br /> DART </h2>
                         <h4> simulation, dart, matlab</h4>
                         <div class="h-50"></div>
-                        <p> In progress! <br /> <a href="https://www.youtube.com/watch?v=q1LPeMNXBCU">Watch a simulation here. </a> </p>
+                        <p> In progress! <br /> <br /> 
+                            <a href="https://github.com/areebm/vehicle-dynamics-sim"> View the code here. </a> <br /> 
+                            <a href="https://www.youtube.com/watch?v=q1LPeMNXBCU"> Watch a simulation here. </a> </p>
                         <br />
                         <br />
                         <img src="img/portfolio/vehicle_simulation/suspension_plot.png" alt="" class="img-responsive" />
@@ -453,7 +458,8 @@
                         <h2>Mobile App<br /> Development </h2>
                         <h4> android studio, mobile app, design</h4>
                         <div class="h-50"></div>
-                        <p> In progress! </p>
+                        <p> In progress! <br /> <br />
+                            <a href="https://github.com/parthsdoshi/EarthShare">View the code here. </a> </p>
                         <br />
                         <br />
                     </div>
