Updated About Me with current area of interest. Removed irrelevant work history

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                 <h1 class="size-50">About <br/> Me</h1>
                 <div class="h-50"></div>
                 <p>I am a Mechanical Engineering student at the Georgia Institute of Technology. I hold a Bachelors of Science degree in Mechanical Engineering with a Minor in Computer Science from the Universtiy of California, Davis.</p>
-                <p>I enjoy developing software, motorcycle riding, photography, design and learning new things! </p>
-                <p>This website is a gallery of the projects I've worked on. Please view my Github for any related code. </p>
+                <p>I enjoy developing software, motorcycle riding, photography, design and learning new things! My current areas of interest are in Autonomous Robotics - specifically Dynamics, Control, Perception, and Localization. </p>
+                <p>This website is a collection of projects I've worked on. Cooler things will be added soon! </p>
                 <!-- <div class="h-50"></div> <img src="img/Signature.svg" width="230" alt="" /> -->
                 <div class="h-50"></div>
             </div>
@@ -133,18 +133,6 @@
                                 <br>Determined best materials and design for optimum manufacturability and cost.</p>
                             <p><strong>Product</strong> 
                                 <br>Co-invented a proprietary pharmaceutical product and wrote Provisional Patent Application.</p>
-                        </div>
-                    </li>
-                    <li class="timeline-event" data-aos="fade-up" data-aos-delay=".4">
-                        <label class="timeline-event-icon"></label>
-                        <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">January 2013 - January 2015</p>
-                            <h3>Computer Room Consultant</h3>
-                            <h4>Academic Technology Services, Davis CA</h4>
-                            <p><strong>Task 1</strong>
-                                <br>Provided software help and consulatation services to university computer lab patrons. </p>
-                            <p><strong>Task 2</strong>
-                                <br>Ensured the security of lab equipment and provided direct help to classes taught in the computer labs.</p>
                         </div>
                     </li>
                 </ul>
