--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail"> - July 2019</p>
+                            <p class="timeline-event-thumbnail"> Current</p>
                             <h3>Graduate Research Assistant</h3>
                             <h4>Georgia Institute of Technology</h4>
                             <p><strong>Control and Dynamics</strong>
@@ -227,18 +227,6 @@
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 cad">
-                                <a id="demo01" href="#animatedModal_cad" class="portfolio_item"> <img src="img/portfolio/cad/cartesian.JPG" alt="image" class="img-responsive" />
-                                    <div class="portfolio_item_hover">
-                                        <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Cartesian Assembly</span> <em>Computer Aided Design</em> </div>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                            <!-- end single work -->
-
-                            <!-- single work -->
                             <div class="col-md-4 col-sm-6 software">
                                 <a id="demo06" href="#animatedModal_vehicle_sim" class="portfolio_item"> <img src="img/portfolio/vehicle_simulation/vehicle_dynamics_screenshot.png" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
@@ -256,6 +244,18 @@
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Robotics</span> <em>Robotics</em> </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <!-- end single work -->
+
+                            <!-- single work -->
+                            <div class="col-md-4 col-sm-6 cad">
+                                <a id="demo01" href="#animatedModal_cad" class="portfolio_item"> <img src="img/portfolio/cad/cartesian.JPG" alt="image" class="img-responsive" />
+                                    <div class="portfolio_item_hover">
+                                        <div class="portfolio-border clearfix">
+                                            <div class="item_info"> <span>Cartesian Assembly</span> <em>Computer Aided Design</em> </div>
                                         </div>
                                     </div>
                                 </a>
@@ -298,7 +298,7 @@
                         <h2>Computer Aided Design<br /> Gallery </h2>
                         <h4> solidworks, design</h4>
                         <div class="h-50"></div>
-                        <p>In progress! </p>
+                        <p>This portion of the website is in progress! <br /> <br /> Meanwhile, here are some photos of my work:</p>
                         <br />
                         <br /> <img src="img/portfolio/cad/cartesian.JPG" alt="" class="img-responsive" />
                         <br />
@@ -324,7 +324,7 @@
                 <div class="portfolio-padding">
                     <div class="col-md-8 col-md-offset-2">
                         <h2>Software Engineering Internship<br /> Renovo Auto </h2>
-                        <h4> java, android, adobe illustrator, 0MQ</h4>
+                        <h4> java, android, adobe illustrator, ZeroMQ</h4>
                         <div class="h-50"></div>
                         <p>A Renovo collaboration with their customer, the Stanford Dynamic Design Lab. Renovo supplied a high-power electric drivetrain 
                         to the research vehicle, a 1981 Delorean named MARTY. </p>
@@ -367,14 +367,22 @@
                         <h2>Solar Car at UC Davis<br /> Gallery </h2>
                         <h4> solidworks, automotive, design, manufacturing</h4>
                         <div class="h-50"></div>
-                        <p>In progress! <br /> <br /> Meanwhile, here are some photos of my work: </p>
+                        <p>This portion of the website is in progress! <br /> <br /> Meanwhile, here are some photos of my work: </p>
                         <br />
-                        <br /> <img src="img/portfolio/solar_car/chassis_full.JPG" alt="" class="img-responsive" />
+                        <br /> <img src="img/portfolio/solar_car/chassis_full.JPG" alt="" class="img-responsive" /> <br />
+                        <p align="center"> Spaceframe chassis I designed as a Chassis Team lead. </p>
                         <br />
                         <br />
                         <img src="img/portfolio/solar_car/shell_sizing_iso.JPG" alt="" class="img-responsive" /><br /> 
+                        <p align="center"> A reference aerodynamic shell built around the chassis during development. </p>
+                        <br />
+                        <br />
                         <img src="img/portfolio/solar_car/final_assembly_captioned.JPG" alt="" class="img-responsive" /><br /> 
-                        <img src="img/portfolio/solar_car/enclosure_side_view.JPG" alt="" class="img-responsive" />
+                        <p align="center"> An electrically isolated battery enclosure designed by myself and two partners for our Senior Design. It features a novel and robust cooling system. </p>
+                        <br />
+                        <br />
+                        <img src="img/portfolio/solar_car/enclosure_side_view.JPG" alt="" class="img-responsive" /><br /> 
+                        <p align="center"> A side view of 18650 battery cells and the intake and exhaust manifolds. </p>
                         <br />
                         <br /> 
                     </div>
@@ -395,9 +403,18 @@
                         <h2>Game Development<br /> Gallery </h2>
                         <h4> design, game development, unity</h4>
                         <div class="h-50"></div>
-                        <p> In progress! <br /> <br />
-                            Blocksoid was my first software project ever, and I built it in my free time.
+                        <p> Blocksoid was my first software project ever, and I built it in my free time.
                             <a href="https://github.com/areebm/blocksoid"> View the game code here. </a> </p>
+                        <br />
+                        <br />
+                        <div class="row">
+                            <div class="column"> 
+                                <img src="img/portfolio/game_dev/screenshot_menu.png" alt="" class="img-responsive" />
+                            </div>
+                            <div class="column"> 
+                                <img src="img/portfolio/game_dev/screenshot_gameplay.png" alt="" class="img-responsive" />
+                            </div>
+                        </div>
                         <br />
                         <br />
                     </div>
@@ -418,12 +435,18 @@
                         <h2>Vehicle Simulation<br /> DART </h2>
                         <h4> simulation, dart, matlab</h4>
                         <div class="h-50"></div>
-                        <p> In progress! <br /> <br /> 
-                            <a href="https://github.com/areebm/vehicle-dynamics-sim"> View the code here. </a> <br /> 
-                            <a href="https://www.youtube.com/watch?v=q1LPeMNXBCU"> Watch a simulation here. </a> </p>
+                        <p> A project to explore how well DART would do to simulate vehicle dynamics. I built this body-on-chassis style vehicle with a basic table-top suspension. With more time, I plan on implementing a more sophisticated suspension setup (double wishbone or multi-link), improving the dynamics of the vehicle to mimic various driving modes, and to develop different control algorithms for the vehicle. 
+                            <br /> <br /> 
+                             <a href="https://www.youtube.com/watch?v=q1LPeMNXBCU"> Watch a simulation here. </a><br /> 
+                            <a href="https://github.com/areebm/vehicle-dynamics-sim"> View the code here. </a> </p>
+                            <!-- TO-DO: Fix issue where iframe is blank -->
+                            <!-- <div>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/q1LPeMNXBCU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div> -->
                         <br />
                         <br />
                         <img src="img/portfolio/vehicle_simulation/suspension_plot.png" alt="" class="img-responsive" />
+                        <p align="center"> Plots of suspension position over time </p>
                         <br />
                         <br />
                     </div>
@@ -444,7 +467,7 @@
                         <h2>Robotics<br /> DART </h2>
                         <h4> simulation, dart, robotics</h4>
                         <div class="h-50"></div>
-                        <p> In progress! </p>
+                        <p> This portion of the website is in progress! </p>
                         <br />
                         <br />
                     </div>
@@ -465,7 +488,7 @@
                         <h2>Mobile App<br /> Development </h2>
                         <h4> android studio, mobile app, design</h4>
                         <div class="h-50"></div>
-                        <p> In progress! <br /> <br />
+                        <p> This portion of the website is in progress! <br /> <br />
                             <a href="https://github.com/parthsdoshi/EarthShare">View the code here. </a> </p>
                         <br />
                         <br />
