--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                 <div class="h-50"></div>
             </div>
             <div class="col-md-6 about-img-div">
-                <div class="about-border" data-aos="fade-up" data-aos-delay=".5"></div>
-                <img src="img/about_me_portrait.JPG" width="400" class="img-responsive" alt="" align="right" data-aos="fade-right" data-aos-delay="0" />
+                <!-- <div class="about-border" data-aos="fade-up" data-aos-delay=".2"></div> -->
+                <img src="img/about_me_portrait2.jpg" width="600" class="img-responsive" alt="" align="right" data-aos="fade-right" data-aos-delay="0" />
             </div>
         </div>
     </div>
