Changed image of battery enclosure and added detail about simulation

--- a/index.html
+++ b/index.html
@@ -381,8 +381,8 @@
                         <p align="center"> An electrically isolated battery enclosure designed by myself and two partners for our Senior Design. It features a novel and robust cooling system. </p>
                         <br />
                         <br />
-                        <img src="img/portfolio/solar_car/enclosure_side_view.JPG" alt="" class="img-responsive" /><br /> 
-                        <p align="center"> A side view of 18650 battery cells and the intake and exhaust manifolds. </p>
+                        <img src="img/portfolio/solar_car/normal_fillet_side_view.PNG" alt="" class="img-responsive" /><br /> 
+                        <p align="center"> A view of air flow velocity over the transversely mounted 18650 cells, and through the intake and exhaust manifolds (The grey blocks in the image are the cell modules - cells are not visible). </p>
                         <br />
                         <br /> 
                     </div>
