Added a link to IK video under Robotics modal

--- a/index.html
+++ b/index.html
@@ -467,7 +467,9 @@
                         <h2>Robotics<br /> DART </h2>
                         <h4> simulation, dart, robotics</h4>
                         <div class="h-50"></div>
-                        <p> This portion of the website is in progress! </p>
+                        <p> This portion of the website is in progress. Meanwhile, you can see a cool simulation of some of my work at the link below.  
+                            <br /> <br /> 
+                             <a href="https://youtu.be/ZnX2Zx5hVZE"> Inverse Kinematics of a 7-DOF Arm </a><br />
                         <br />
                         <br />
                     </div>
