Updated work experience and general review

--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
                     <h4>Areeb Mehmood</h4>
-                    <h1>M.S. Robotics Engineering</h1> 
-                    <p> This website is a work in progress </p>
+                    <h1>M.S. Robotics Engineering</h1>
                 </div>
             </div>
         </div>
@@ -70,8 +69,8 @@
                 <h1 class="size-50">About <br/> Me</h1>
                 <div class="h-50"></div>
                 <p>I am a graduate from the Georgia Institute of Technology, where I earned my Masters of Science in Robotics Engineering. I hold a Bachelors of Science degree in Mechanical Engineering with a Minor in Computer Science from the Universtiy of California, Davis.</p>
-                <p>I enjoy developing software, motorcycle riding, design, and learning new things! My current areas of interest are in Autonomous Robotics - specifically Control and working with sensors such as LIDAR, Radar and 3D vision to accomplish intelligient understanding of surroundings. </p>
-                <p>This website is a collection of projects I've worked on. Cooler things will be added soon! </p>
+                <p>I enjoy developing software, motorcycle riding, and all aspects of design. My current areas of interest are Trajectory Planning and Percpetion to accomplish intelligient understanding and navigation of surroundings. </p>
+                <p>This website is a collection of projects I've worked on. Cooler things will be added over time. </p>
                 <!-- <div class="h-50"></div> <img src="img/Signature.svg" width="230" alt="" /> -->
                 <div class="h-50"></div>
             </div>
@@ -98,9 +97,20 @@
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
                             <p class="timeline-event-thumbnail"> Current</p>
+                            <h3>Software Engineer</h3>
+                            <h4>SuitX, Emeryville CA</h4>
+                            <p><strong>Controls</strong>
+                                <br> Maintaining and developing control code for an assistive exoskeleton platform. </p>
+                        </div>
+                    </li>
+
+                    <li class="timeline-event" data-aos="fade-up">
+                        <label class="timeline-event-icon"></label>
+                        <div class="timeline-event-copy">
+                            <p class="timeline-event-thumbnail"> January 2018 - August 2019</p>
                             <h3>Graduate Research Assistant</h3>
-                            <h4>Georgia Institute of Technology</h4>
-                            <p><strong>Control and Dynamics</strong>
+                            <h4>Georgia Institute of Technology, Atlanta GA</h4>
+                            <p><strong>Controls and Dynamics</strong>
                                 <br>Developed an optimizaiton-based Inverse Kinematics formulation for control of robotic platform 7-DOF arms (utilizing joint-level PID). Explored learning of arm parameters with the goal of developing an Inverse Dynamics formulation for torque control.</p>
                             <p><strong>Simulation</strong>  
                                 <br>Through simulation in DART, confirmed the viability of IK/ID arm control methods for accomplishment of higher level balancing tasks of the two-wheeled robotic platform. </p>
@@ -369,7 +379,7 @@
                         <h2>Solar Car at UC Davis<br /> Gallery </h2>
                         <h4> solidworks, automotive, design, manufacturing</h4>
                         <div class="h-50"></div>
-                        <p>This portion of the website is in progress! <br /> <br /> Meanwhile, here are some photos of my work: </p>
+                        <p>Here are some photos of my work: </p>
                         <br />
                         <br /> <img src="img/portfolio/solar_car/chassis_full.JPG" alt="" class="img-responsive" /> <br />
                         <p align="center"> Spaceframe chassis I designed as a Chassis Team lead. </p>
@@ -469,10 +479,10 @@
                         <h2>Robotics<br /> DART </h2>
                         <h4> simulation, dart, robotics</h4>
                         <div class="h-50"></div>
-                        <p> This portion of the website is in progress.</p>
                         <br />
+                        <p> As a graduate student at Georgia Tech, I had the fortunate opportunity to work with a giant hardware platform, Golem Krang, which is a wheeled, inverted pendulum humanoid. I assisted in many aspects of the research projects conducted on this platform during my two years in the lab, including driver-level coding, control software, dynamics simulation, conducting experiment and hardware upgrades and repairs. In particular, my Masters thesis involved development of an Inverse Kinematics controller for Krang's arms, as well as installation of a perception system for target object detection and grasping through visual servo.</p>
                         <img src="img/portfolio/robotics/krang_portrait_up.png" alt="" class="img-responsive" />
-                        <p align="center"> Portrait of the Wheeled Inverted Pendulum Humanoid, Golem Krang. </p>
+                        <p align="center"> Portrait of Golem Krang. </p>
                         <br />
                         <img src="img/portfolio/robotics/transformShot.png" alt="" class="img-responsive" />
                         <p align="center"> A model of one of Krang's arms, with ZED Stereo Camera attached </p>
