--- a/index.html
+++ b/index.html
@@ -68,15 +68,20 @@
                 <h4>01</h4>
                 <h1 class="size-50">About <br/> Me</h1>
                 <div class="h-50"></div>
-                <p>I am a graduate from the Georgia Institute of Technology, where I earned my Masters of Science in Robotics Engineering. I hold a Bachelors of Science degree in Mechanical Engineering with a Minor in Computer Science from the Universtiy of California, Davis.</p>
-                <p>I enjoy developing software, motorcycle riding, and all aspects of design. My current areas of interest are Trajectory Planning and Percpetion to accomplish intelligient understanding and navigation of surroundings. </p>
+                <p>I am a graduate from the Georgia Institute of Technology, where I earned my 
+                    Masters of Science in Robotics Engineering. I hold a Bachelors of Science 
+                    degree in Mechanical Engineering with a Minor in Computer Science from the 
+                    Universtiy of California, Davis.</p>
+                <p>I enjoy developing software, motorcycle riding, and all aspects of design. 
+                    My current areas of interest are Trajectory Planning and Perception to 
+                    accomplish intelligient understanding and navigation of surroundings. </p>
                 <p>This website is a collection of projects I've worked on. Cooler things will be added over time. </p>
                 <!-- <div class="h-50"></div> <img src="img/Signature.svg" width="230" alt="" /> -->
                 <div class="h-50"></div>
             </div>
             <div class="col-md-6 about-img-div">
                 <!-- <div class="about-border" data-aos="fade-up" data-aos-delay=".2"></div> -->
-                <img src="img/about_me_portrait2.jpg" width="600" class="img-responsive" alt="" align="right" data-aos="fade-right" data-aos-delay="0" />
+                <img src="img/about_me_portrait3.jpg" width="600" class="img-responsive" alt="" align="right" data-aos="fade-right" data-aos-delay="0" />
             </div>
         </div>
     </div>
@@ -100,7 +105,13 @@
                             <h3>Software Engineer</h3>
                             <h4>SuitX, Emeryville CA</h4>
                             <p><strong>Controls</strong>
-                                <br> Maintaining and developing control code for an assistive exoskeleton platform. </p>
+                                <br> Researching and developing control trajectories for a medical exoskeleton. 
+                            <p><strong>Simulation</strong>
+                                <br> Integrated simulation pipeline with production codebase for testing before
+                                hardware deployment.
+                            <p><strong>Embedded System</strong>
+                                <br> Writing embedded motor control code for testing and integration of new motor architectures.
+                            </p>
                         </div>
                     </li>
 
